# EBR

./: .gitignore  README.md  pyproject.toml
config/: mes_config.yaml
src/mes/: __init__.py  config.py  main.py  models.py
src/mes/api/: __init__.py  routes.py
src/mes/connectors/: __init__.py  qmib_client.py
src/mes/services/: __init__.py  batch_service.py  integration_service.py
